--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,403 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding: 92px 49px 96px 51px;
+  
+}
+
+.header_menu {
+  display: flex;
+  justify-self: start;
+  min-width: 395px;
+  
+}
+.header__logo {
+ 
+	justify-self: center;
+	margin-right: 94px;
+  width: 140px;
+  height: 105px;
+  
+}
+.header__logo-image {
+  display: block;
+  width: 100%;
+}
+
+.address{
+  
+  justify-self: end;
+  margin-right: 4px;
+  max-width: 238px;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.3px;
+
+}
+.address-card {
+  font-family: 'Raleway';
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 0.3px;
+
+}
+
+.header_menu-list {
+  display: flex;
+  gap: 15px 33px;
+  align-items: center;
+  font-size: 18px;
+  list-style: circle;
+  
+}
+.header_menu-list:last-child{
+  gap: 15px 32px;
+}
+
+.header_menu-list-item {
+}
+
+.header_menu_link{
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 0.3px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: normal;
+  
+  
+}
+.header__links-list-item_no-bullit {
+  list-style: none;
+  text-decoration: none;
+}
+
+/* блок оно тебе надо */
+.cover {
+  position: relative;
+  z-index: 1;
+  background: url(../images/cover.jpg) lightgray -151px -88.833px / 127.455% 123.47% no-repeat;
+  /* background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;*/
+  
+  background-position: center;
+  background-size: cover;
+  height: 757px; 
+  
+  
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.6;
+  background: #000;
+  width: 100%;
+  height: 100%;
+
+}
+
+.cover__title {
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  justify-content: center;
+
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  margin: 165px 0 0 50px;
+  line-height: 115%;
+  
+}
+.aligned-text_center {
+  text-align: center;
+  align-items: center;
+  line-height: 100%;
+  
+}
+.aligned-text_right {
+  text-align: right;
+  align-items: center;
+  line-height: 100%;
+  margin-right: 50px;
+}
+
+.cover__description{
+  display: flex;
+  
+  align-items: center;
+  margin: 135px 0px 0px 82px;
+  color: #FFF;
+  font-family: Raleway;
+  
+  font-style: normal;
+  text-transform: uppercase;
+
+}
+.cover__description-text {
+  
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  word-spacing: 18px;
+  
+  
+}
+.bet-button {
+  margin-left:77px ;
+  
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  width: 256px;
+  height: 51px;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  text-align: center;
+ 
+ 
+
+}
+
+.header__links-list-item_no-bullit {
+}
+.header_menu_link {
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+.no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+/* блок с карточками */
+.lots{
+  font-family: Raleway;
+  margin-top: 179px;
+  width: 563px;
+  padding: 0 24px;
+  
+  
+
+}
+.lots__heading {
+  color: #000;
+  
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0 0 27px 40px;
+  
+}
+.lots__card-list {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 25px;
+  margin-bottom: 30px;
+  
+
+}
+.lots__card-list-item{
+  display: flex;
+  min-width: 334px;
+ 
+  
+
+}
+.card-link {
+  
+  text-decoration: none;
+ 
+}
+.card{
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 48px 40px;
+  width: 100%;
+  height: 100%;
+  
+  color: #FFF;
+  background-color: #a7a7a7;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+} 
+
+
+.card_type_film {
+  background-image: url(..//images/card-lot-01.jpg);
+
+}
+
+
+.card_type_book {
+  background-image: url(..//images/card-lot-02.jpg); 
+ 
+}
+
+
+.card_type_picture {
+  background-image: url(..//images/card-lot-03.jpg); 
+ 
+}
+.card__title {
+
+font-size: 22px;
+font-weight: 700;
+line-height: 120%; /* 26.4px */
+text-decoration-line: underline;
+text-underline-offset: 3px;
+text-decoration-thickness: 0.3px;
+text-transform: uppercase;
+}
+.card__text {
+  
+  margin-top: auto;
+
+font-size: 20px;
+font-weight: 400;
+line-height: 24px;
+
+}
+.lots__look-more-link{
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0px 0 0 40px;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 0.3px;
+
+
+}
+/* сексия about */
+.about{
+  margin: 146px 24px 0 24px;
+
+
+}
+.about__column{
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: 281px 120px 168px;
+  gap: 2px 26px;
+
+}
+.about__logo{
+  display: flex;
+  grid-row: 1/4;
+  margin-top: 35px;
+  justify-self: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background: #000;
+}
+.about__logo-image{
+  width: 148px;
+  height: 114px;
+  margin: auto;
+}
+.about__title{
+  grid-row: 1/2;
+  grid-column: 2/3;
+  align-self: center; 
+  justify-self: start;
+  color: #000;
+  font-family: Raleway;
+  margin-top: 35px;
+  line-height: 24px; 
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+
+.about__text{
+ place-items: start;
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.text_decoration{
+  padding-top: 23px;
+}
+
+/* Секция подвал */
+.footer{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 185px;
+  margin: 201px 50px 91px 50px;
+  font-size: 18px;
+}
+.address{
+  white-space: nowrap;
+}
+.footer__address-link{
+  text-decoration: underline;
+  text-underline-offset: 5px; 
+  text-decoration-thickness: 0.3px;
+
+}
+.footer__menu{
+  
+  justify-self: end;
+  text-align: center;
+  
+}
+.footer__social-list{
+  display: flex;
+  gap: 48px;
+ 
+}
+
+.footer__menu-list{
+  list-style: none;
+ 
+}
+.footer__menu-list-item{}
+
+.footer__menu-link{
+  text-decoration: underline;
+  text-underline-offset: 5px; 
+  text-decoration-thickness: 0.3px;
+}
+.footer__menu-link_active{
+  text-decoration: none;
+}
+
+.footer__social-list-item{
+  list-style: none;
+}
+.footer__social-link{}
+
+.footer__social-icon{
+  width: 48px;
+  height: 48px;
+}
+
