--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,14 @@
   justify-self: start;
   min-width: 395px;
 }
+
 .header__logo {
   justify-self: center;
   width: 140px;
   height: 105px;
   margin-right: 94px;
 }
+
 .header__logo-image {
   display: block;
   width: 100%;
@@ -30,28 +32,27 @@
   font-style: normal;
   line-height: 24.3px;
 }
+
 .address-card {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   text-decoration: underline;
   text-decoration-thickness: 0.3px;
   text-underline-offset: 5px;
 }
 
-.header_menu-list {
+.header_links-list {
   display: flex;
   align-items: center;
   gap: 15px 33px;
   font-size: 18px;
   list-style: circle;
 }
+
 .header_menu-list:last-child {
   gap: 15px 32px;
 }
 
-.header_menu-list-item {
-}
-
-.header_menu_link {
+.header_link {
   font-weight: 400;
   font-size: 18px;
   line-height: normal;
@@ -59,9 +60,13 @@
   text-decoration-thickness: 0.3px;
   text-underline-offset: 5px;
 }
+
 .header__links-list-item_no-bullit {
-  text-decoration: none;
   list-style: none;
+}
+
+.header_link_active {
+  text-decoration: none;
 }
 
 /* блок оно тебе надо */
@@ -73,7 +78,6 @@
     123.47% no-repeat;
   /* background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;*/
-
   background-position: center;
   background-size: cover;
 }
@@ -95,108 +99,100 @@
   flex-direction: column;
   justify-content: center;
   row-gap: 20px;
-
   color: #fff;
-  font-family: Raleway;
   font-weight: 700;
   font-size: 100px;
-  font-style: normal;
-
   letter-spacing: 30px;
   text-transform: uppercase;
+  padding: 165px 50px 0 50px;
 }
 
 .aligned-text {
-  margin: 165px 0 0 50px;
   line-height: 115%;
 }
+
 .aligned-text_center {
   align-items: center;
   line-height: 100%;
   text-align: center;
 }
+
 .aligned-text_right {
   align-items: center;
-  margin-right: 50px;
   line-height: 100%;
   text-align: right;
 }
 
 .cover__description {
   display: flex;
-
   align-items: center;
   margin: 135px 0px 0px 82px;
   color: #fff;
-  font-family: Raleway;
-
-  font-style: normal;
   text-transform: uppercase;
 }
+
 .cover__description-text {
   font-weight: 400;
-
   font-size: 22px;
   line-height: 28px;
   word-spacing: 18px;
 }
+
 .bet-button {
   width: 256px;
-  height: 51px;
+  min-height: 51px;
   margin-left: 77px;
-  border: 1px solid white;
-
+  border: 1px solid currentColor;
   color: white;
-  font-family: Raleway;
   font-weight: 500;
   font-size: 22px;
-  font-style: normal;
-  line-height: normal;
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
 }
 
-.header__links-list-item_no-bullit {
-}
-.header_menu_link {
-}
-
 .letter-spacing-extended {
   letter-spacing: 60px;
 }
+
 .no-letter-spacing {
   letter-spacing: 0px;
 }
 
 /* блок с карточками */
 .lots {
-  width: 563px;
   margin-top: 179px;
   padding: 0 24px;
-  font-family: Raleway;
+ 
 }
+
 .lots__heading {
   margin: 0 0 27px 40px;
   color: #000;
   font-weight: 700;
-
   font-size: 40px;
   text-transform: uppercase;
 }
+
 .lots__card-list {
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 30px;
   justify-content: space-between;
   column-gap: 25px;
   margin-bottom: 30px;
 }
+
 .lots__card-list-item {
   display: flex;
-  min-width: 334px;
+  width: 334px;
+  height: 563px;
 }
+
 .card-link {
   text-decoration: none;
 }
+
 .card {
   position: relative;
   z-index: 1;
@@ -205,7 +201,6 @@
   width: 100%;
   height: 100%;
   padding: 48px 40px;
-
   color: #fff;
   background-color: #a7a7a7;
   background-repeat: no-repeat;
@@ -214,7 +209,7 @@
 }
 
 .card_type_film {
-  background-image: url(..//images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
@@ -226,7 +221,6 @@
 }
 .card__title {
   font-weight: 700;
-
   font-size: 22px;
   line-height: 120%; /* 26.4px */
   text-decoration-line: underline;
@@ -234,13 +228,14 @@
   text-underline-offset: 3px;
   text-transform: uppercase;
 }
+
 .card__text {
   margin-top: auto;
   font-weight: 400;
-
   font-size: 20px;
   line-height: 24px;
 }
+
 .lots__look-more-link {
   margin: 0px 0 0 40px;
   color: #000;
@@ -250,56 +245,64 @@
   text-decoration-thickness: 0.3px;
   text-underline-offset: 5px;
 }
+
 /* сексия about */
 .about {
   margin: 146px 24px 0 24px;
 }
+
 .about__column {
   display: grid;
   grid-template-columns: 334px 1fr;
-  grid-template-rows: 281px 120px 168px;
-  gap: 2px 26px;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 6px 26px;
+
 }
+
 .about__logo {
+  margin-top: 35px;
   display: flex;
   grid-row: 1/4;
   justify-self: center;
   width: 240px;
   height: 240px;
-  margin-top: 35px;
   border-radius: 50%;
   background: #000;
 }
+
 .about__logo-image {
   width: 148px;
   height: 114px;
   margin: auto;
 }
+
+.description_block{
+ padding-bottom: 26px;
+  
+}
 .about__title {
   grid-column: 2/3;
   grid-row: 1/2;
-  justify-self: start;
   align-self: center;
-  margin-top: 35px;
   color: #000;
-  font-family: Raleway;
   font-weight: 700;
   font-size: 40px;
   line-height: 24px;
+  padding-top: 113px;
   text-transform: uppercase;
 }
 
 .about__text {
-  place-items: start;
+  /* place-items: start; */
   color: #000;
-  font-family: Raleway;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
+  padding-top: 20px;
 }
 
 .text_decoration {
-  padding-top: 23px;
+  padding-top: 78px;
 }
 
 /* Секция подвал */
@@ -307,21 +310,19 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 185px;
-  margin: 201px 50px 91px 50px;
+  margin: 168px 50px 91px 50px;
   font-size: 18px;
 }
+
 .address {
   white-space: nowrap;
 }
-.footer__address-link {
-  text-decoration: underline;
-  text-decoration-thickness: 0.3px;
-  text-underline-offset: 5px;
-}
+
 .footer__menu {
   justify-self: end;
   text-align: center;
 }
+
 .footer__social-list {
   display: flex;
   gap: 48px;
@@ -330,22 +331,19 @@
 .footer__menu-list {
   list-style: none;
 }
-.footer__menu-list-item {
-}
 
 .footer__menu-link {
   text-decoration: underline;
   text-decoration-thickness: 0.3px;
   text-underline-offset: 5px;
 }
+
 .footer__menu-link_active {
   text-decoration: none;
 }
 
 .footer__social-list-item {
   list-style: none;
-}
-.footer__social-link {
 }
 
 .footer__social-icon {
